--- a/HelpDesk/staff/templates/manager/CreateAccount.html
+++ b/HelpDesk/staff/templates/manager/CreateAccount.html
@@ -27,13 +27,13 @@
 
             <label>Vai trò</label><br>
             <input type="radio" name="role" id="nhanVienRadio" value="staff" checked> 
-            <label for="nhanVienRadio" class="labelOfRadio">&nbsp;Nhân viên</label><br>
+            <label for="nhanVienRadio" class="labelOfRadio">Nhân viên</label><br>
             
             <input type="radio" name="role" id="quanLyRadio" value="manager">
-            <label for="quanLyRadio" class="labelOfRadio">&nbsp;Quản lý</label><br>
+            <label for="quanLyRadio" class="labelOfRadio">Quản lý</label><br>
             
             <input type="radio" name="role" id="kyThuatVienRadio" value="technician">
-            <label for="kyThuatVienRadio" class="labelOfRadio">&nbsp;Kỹ thuật viên</label><br>
+            <label for="kyThuatVienRadio" class="labelOfRadio">Kỹ thuật viên</label><br>
 
             <input type="submit" value="Tạo tài khoản" id="createAccountBtn" onclick="return TestPassword()">
         </form>
