--- a/HelpDesk/staff/templates/manager/ProblemDetail.html
+++ b/HelpDesk/staff/templates/manager/ProblemDetail.html
@@ -17,7 +17,7 @@
     <div class="title">Chi tiết sự cố</div>
     <table border="1" id="userCreate">
         <tr>
-            <th colspan="2" class="sectionTitle">Thông tin người tạo sự cố</th>
+            <th colspan="2" class="titleTable">Thông tin người tạo sự cố</th>
         </tr>
         <tr>
             <td>Họ tên</td>
@@ -31,7 +31,7 @@
 
     <table border="1" id="problemDetail">
         <tr>
-            <th colspan="2" class="sectionTitle">Thông tin sự cố</th>
+            <th colspan="2" class="titleTable">Thông tin sự cố</th>
         </tr>
         <tr>
             <td>Nội dung sự cố</td>
