--- a/HelpDesk/staff/templates/manager/Index.html
+++ b/HelpDesk/staff/templates/manager/Index.html
@@ -19,56 +19,15 @@
         <a onclick="ChooseMenuItem(event, 'problemNotDoneTable')" class="menuItem menuItemActive">Sự cố chưa hoàn thành</a>
         <a onclick="ChooseMenuItem(event, 'problemDoneTable')" class="menuItem">Sự cố đã hoàn thành</a>
         <a onclick="ChooseMenuItem(event, 'faqTable')" class="menuItem">Danh sách FAQ</a>
-        <button onclick="document.getElementById('modalFrame').style.display='block';">click me</button>
     </div>
     <div class="mainContent">
         <div class="problemTable tabContent" id="problemNotDoneTable" style="display: block;">
             <table border="1" width="100%">
                 <tr>
-                    <th class="titleTable" colspan="7">
-                        Danh sách sự cố chưa giải quyết
-                    </th>
-                </tr>
-                <tr>
                     <th width="50%">Nội dung</th>
                     <th width="10%">Hình ảnh</th>
                     <th width="15%">Trạng thái</th>
                     <th colspan="4" width="25%">Các thao tác</th>
-                </tr>
-                <tr>
-                    <td class="content">
-                        Ngứa tay nên báo cáo
-                    </td>
-                    <td>
-                        <img src="image/problem.jpg" alt="Hình sự cố" class="problemImage" onclick="ZoomImage('image/problem.jpg')">
-                    </td>
-                    <td class="status">
-                        Đã gửi
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/XemChiTiet.jpg" alt="">
-                            <span class="tip">Xem chi tiết</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/Duyet.png" alt="">
-                            <span class="tip">Duyệt</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/TaoCongViec.png" alt="">
-                            <span class="tip">Tạo công việc</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/XemCongViec.png" alt="">
-                            <span class="tip">Xem công việc</span>
-                        </div>
-                    </td>
                 </tr>
             </table>
         </div>
@@ -76,34 +35,9 @@
         <div class="problemTable tabContent" id="problemDoneTable">
             <table border="1" width="100%">
                 <tr>
-                    <th class="titleTable" colspan="4">
-                        Danh sách sự cố đã được giải quyết
-                    </th>
-                </tr>
-                <tr>
                     <th width="70%">Nội dung</th>
                     <th width="15%">Hình ảnh</th>
                     <th width="15%" colspan="2">Thao tác</th>
-                </tr>
-                <tr>
-                    <td class="content">
-                        Ngứa tay nên báo cáo
-                    </td>
-                    <td>
-                        <img src="image/problem.jpg" alt="Hình sự cố" class="problemImage" onclick="ZoomImage('image/problem.jpg')">
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/XemChiTiet.jpg" alt="">
-                            <span class="tip">Xem chi tiết</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/XemCongViec.png" alt="">
-                            <span class="tip">Xem công việc</span>
-                        </div>
-                    </td>
                 </tr>
             </table>
         </div>
@@ -115,166 +49,6 @@
                     <th width="45%">Trả lời</th>
                     <th width="25%" colspan="2">Thao tác</th>
                 </tr>
-                <tr>
-                    <td class="question">
-                        Máy đứng 
-                    </td>
-                    <td class="answer">	
-                        Khởi động lại
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/update.png" alt="">
-                            <span class="tip">Cập nhật</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/delete.png" alt="">
-                            <span class="tip">Xóa</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="question">
-                        Máy đứng 
-                    </td>
-                    <td class="answer">	
-                        Khởi động lại
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/update.png" alt="">
-                            <span class="tip">Cập nhật</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/delete.png" alt="">
-                            <span class="tip">Xóa</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="question">
-                        Máy đứng 
-                    </td>
-                    <td class="answer">	
-                        Khởi động lại
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/update.png" alt="">
-                            <span class="tip">Cập nhật</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/delete.png" alt="">
-                            <span class="tip">Xóa</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="question">
-                        Máy đứng 
-                    </td>
-                    <td class="answer">	
-                        Khởi động lại
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/update.png" alt="">
-                            <span class="tip">Cập nhật</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/delete.png" alt="">
-                            <span class="tip">Xóa</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="question">
-                        Máy đứng 
-                    </td>
-                    <td class="answer">	
-                        Khởi động lại
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/update.png" alt="">
-                            <span class="tip">Cập nhật</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/delete.png" alt="">
-                            <span class="tip">Xóa</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="question">
-                        Máy đứng 
-                    </td>
-                    <td class="answer">	
-                        Khởi động lại
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/update.png" alt="">
-                            <span class="tip">Cập nhật</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/delete.png" alt="">
-                            <span class="tip">Xóa</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="question">
-                        Máy đứng 
-                    </td>
-                    <td class="answer">	
-                        Khởi động lại
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/update.png" alt="">
-                            <span class="tip">Cập nhật</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/delete.png" alt="">
-                            <span class="tip">Xóa</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="question">
-                        Máy đứng 
-                    </td>
-                    <td class="answer">	
-                        Khởi động lại
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/update.png" alt="">
-                            <span class="tip">Cập nhật</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/delete.png" alt="">
-                            <span class="tip">Xóa</span>
-                        </div>
-                    </td>
-                </tr>
             </table>
         </div>
         
@@ -282,245 +56,7 @@
 </div>
 
 <div id="modalFrame">
-    <div id="modalContent">
-        <!-- <div class="workTable" style="display: block;">
-            <table border="1" width="100%">
-                <tr>
-                    <th class="titleTable" colspan="7">
-                        Danh sách công việc theo sự cố
-                    </th>
-                </tr>
-                <tr>
-                    <th width="30%">Tên công việc</th>
-                    <th width="18%">Người giải quyết</th>
-                    <th width="19%">Hạn chót</th>
-                    <th width="13%">Trạng thái</th>
-                    <th colspan="3" width="20%">Thao tác</th>
-                </tr>
-                <tr>
-                    <td class="content">
-                        demo 1-11 cong vieccc vs vsd vsdv  vvs v
-                    </td>
-                    <td class="userFix">
-                        Nguyễn Hải Quỳ
-                    </td>
-                    <td class="deadline">
-                        2020-11-02T10:26
-                    </td>
-                    <td class="status">
-                        Đã xác nhận
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/update.png" alt="">
-                            <span class="tip">Cập nhật</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/delete.png" alt="">
-                            <span class="tip">Xóa</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/moveWork.png" alt="">
-                            <span class="tip">Chuyển</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="content">
-                        demo 1-11 cong vieccc vs vsd vsdv  vvs v
-                    </td>
-                    <td class="userFix">
-                        Nguyễn Hải Quỳ
-                    </td>
-                    <td class="deadline">
-                        2020-11-02T10:26
-                    </td>
-                    <td class="status">
-                        Đã xác nhận
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/update.png" alt="">
-                            <span class="tip">Cập nhật</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/delete.png" alt="">
-                            <span class="tip">Xóa</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/moveWork.png" alt="">
-                            <span class="tip">Chuyển</span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="content">
-                        demo 1-11 cong vieccc vs vsd vsdv  vvs v
-                    </td>
-                    <td class="userFix">
-                        Nguyễn Hải Quỳ
-                    </td>
-                    <td class="deadline">
-                        2020-11-02T10:26
-                    </td>
-                    <td class="status">
-                        Đã xác nhận
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/update.png" alt="">
-                            <span class="tip">Cập nhật</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/delete.png" alt="">
-                            <span class="tip">Xóa</span>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="function">
-                            <img src="./image/moveWork.png" alt="">
-                            <span class="tip">Chuyển</span>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-        </div> -->
-
-        <div class="workTable" style="display: block;">
-            <table border="1" width="100%">
-                <tr>
-                    <th class="titleTable" colspan="3">
-                        Danh sách công việc theo sự cố
-                    </th>
-                </tr>
-                <tr>
-                    <th width="50%">Tên công việc</th>
-                    <th width="25%">Người giải quyết</th>
-                    <th width="25%">Hạn chót</th>
-                </tr>
-                <tr>
-                    <td class="content">
-                        demo 1-11 cong viec
-                    </td>
-                    <td class="userFix">
-                        Nguyễn Hải Quỳ
-                    </td>
-                    <td class="deadline">
-                        2020-11-02T10:26
-                    </td>
-                </tr>
-                <!-- <tr>
-                    <td class="content">
-                        demo 1-11 cong viec
-                    </td>
-                    <td class="userFix">
-                        Nguyễn Hải Quỳ
-                    </td>
-                    <td class="deadline">
-                        2020-11-02T10:26
-                    </td>
-                </tr>
-                <tr>
-                    <td class="content">
-                        demo 1-11 cong viec
-                    </td>
-                    <td class="userFix">
-                        Nguyễn Hải Quỳ
-                    </td>
-                    <td class="deadline">
-                        2020-11-02T10:26
-                    </td>
-                </tr>
-                <tr>
-                    <td class="content">
-                        demo 1-11 cong viec
-                    </td>
-                    <td class="userFix">
-                        Nguyễn Hải Quỳ
-                    </td>
-                    <td class="deadline">
-                        2020-11-02T10:26
-                    </td>
-                </tr>
-                <tr>
-                    <td class="content">
-                        demo 1-11 cong viec
-                    </td>
-                    <td class="userFix">
-                        Nguyễn Hải Quỳ
-                    </td>
-                    <td class="deadline">
-                        2020-11-02T10:26
-                    </td>
-                </tr>
-                <tr>
-                    <td class="content">
-                        demo 1-11 cong viec
-                    </td>
-                    <td class="userFix">
-                        Nguyễn Hải Quỳ
-                    </td>
-                    <td class="deadline">
-                        2020-11-02T10:26
-                    </td>
-                </tr>
-                <tr>
-                    <td class="content">
-                        demo 1-11 cong viec
-                    </td>
-                    <td class="userFix">
-                        Nguyễn Hải Quỳ
-                    </td>
-                    <td class="deadline">
-                        2020-11-02T10:26
-                    </td>
-                </tr>
-                <tr>
-                    <td class="content">
-                        demo 1-11 cong viec
-                    </td>
-                    <td class="userFix">
-                        Nguyễn Hải Quỳ
-                    </td>
-                    <td class="deadline">
-                        2020-11-02T10:26
-                    </td>
-                </tr>
-                <tr>
-                    <td class="content">
-                        demo 1-11 cong viec
-                    </td>
-                    <td class="userFix">
-                        Nguyễn Hải Quỳ
-                    </td>
-                    <td class="deadline">
-                        2020-11-02T10:26
-                    </td>
-                </tr>
-                <tr>
-                    <td class="content">
-                        demo 1-11 cong viec
-                    </td>
-                    <td class="userFix">
-                        Nguyễn Hải Quỳ
-                    </td>
-                    <td class="deadline">
-                        2020-11-02T10:26
-                    </td>
-                </tr> -->
-            </table>
-        </div>
-    </div>
+    <div id="modalContent"></div>
     <span id="modalClose">&times;</span>
 </div>
 <div id="zoomImage">
